Added proper backend logic for complaint-to-employee assignment